[package]
name = "knapsack"
version = "0.1.0"
edition = "2021"

[dependencies]
ec-core = { git = "https://github.com/unhindered-ec/unhindered-ec.git", rev = "dce7338aa6861ddc31e1f7c0601c1bf7fc3df664" }
ec-linear = { git = "https://github.com/unhindered-ec/unhindered-ec.git", rev = "dce7338aa6861ddc31e1f7c0601c1bf7fc3df664" }
thiserror = "1.0.64"

[lints.clippy]
# Lint groups
# These have a priority of -1 to ensure that individual
# Lints override them, if present.
pedantic = { level =  "warn", priority = -1 }
nursery = { level =  "warn", priority = -1 }
cargo = { level =  "warn", priority = -1 }
perf = { level =  "warn", priority = -1 }
complexity = { level =  "warn", priority = -1 }
correctness = { level =  "deny", priority = -1 }
style = { level =  "warn", priority = -1 }
