[package]
name = "knapsack"
version = "0.1.0"
authors = ["Nic McPhee", "Justus Flügel", "Many cool people on Twitch"]
edition = "2021"
description = "An example of implementing the 0-1 Knapsack problem using the unhindered-ec library"
repository = "https://github.com/unhindered-ec/knapsack.git"
license = "MIT OR Apache-2.0"
keywords = ["0-1 knapsack", "linear GA", "bitstring", "unhindered-ec"]
categories = ["evolutionary computation", "genetic algorithms", "combinatorial optimization"]

[dependencies]
anyhow = "1.0.89"
ec-core = { git = "https://github.com/unhindered-ec/unhindered-ec.git", rev = "dce7338aa6861ddc31e1f7c0601c1bf7fc3df664" }
ec-linear = { git = "https://github.com/unhindered-ec/unhindered-ec.git", rev = "dce7338aa6861ddc31e1f7c0601c1bf7fc3df664" }
thiserror = "1.0.64"

[lints.clippy]
# Lint groups
# These have a priority of -1 to ensure that individual
# Lints override them, if present.
pedantic = { level =  "warn", priority = -1 }
nursery = { level =  "warn", priority = -1 }
cargo = { level =  "warn", priority = -1 }
perf = { level =  "warn", priority = -1 }
complexity = { level =  "warn", priority = -1 }
correctness = { level =  "deny", priority = -1 }
style = { level =  "warn", priority = -1 }
